--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,18 +1,38 @@
-.slider {
-  border-radius: 5px;
-  background: #E0E0E0;
-  background: linear-gradient(left top, #E0E0E0, #EEEEEE);
+.container {
   width: 310px;
-  height: 15px;
-  margin: 5px;
-  .thumb {
-    width: 10px;
-    height: 25px;
-    border-radius: 3px;
-    position: relative;
-    left: 10px;
-    top: -5px;
-    background: teal;
+  .slider {
+    border-radius: 5px;
+    background: #E0E0E0;
+    background: linear-gradient(left top, #E0E0E0, #EEEEEE);
+    width: 100%;
+    height: 15px;
     cursor: pointer;
+    .thumb {    
+      position: relative;
+      width: 10px;
+      .handle {
+        position: relative;
+        top: -5px;
+        right: 5px;
+        background: teal;
+        cursor: pointer;
+        width: 10px;
+        height: 25px;
+        border-radius: 3px;
+      }
+      .tooltip {
+        height: 20px;
+        position: fixed;
+        width: 9px;
+        top: 30px;
+      }
+    }
+  }
+  .scale {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3px;
   }
 }
+
